index放到根目录

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="/static/dist/css/index.css">
 </head>
 <body>
-<!--#include virtual="common/header.inc"-->
+<!--#include virtual="/page/common/header.inc"-->
 <div class="container">
   <div class="first-screen clearfix">
     <div class="banner-box left">
       <!-- banner -->
-      <!--#include virtual="include/banner.inc"-->
+      <!--#include virtual="/page/include/banner.inc"-->
     </div>
     <div class="notice right">
       <div class="notice-list">
@@ -44,10 +44,10 @@
         <li>经管</li>
         <li>生活</li>
       </ul>
-      <!--#include virtual="index/xstj/se.inc"-->
-      <!--#include virtual="index/xstj/wy.inc"-->
-      <!--#include virtual="index/xstj/jg.inc"-->
-      <!--#include virtual="index/xstj/sh.inc"-->
+      <!--#include virtual="/page/index/xstj/se.inc"-->
+      <!--#include virtual="/page/index/xstj/wy.inc"-->
+      <!--#include virtual="/page/index/xstj/jg.inc"-->
+      <!--#include virtual="/page/index/xstj/sh.inc"-->
     </div>
     <div class="tab-sidebar right">
       <h3>排行榜</h3>
@@ -57,21 +57,21 @@
           <li>每月排行</li>
           <li>新华推荐</li>
         </ul>
-        <!--#include virtual="index/phb/mztj.inc"-->
-        <!--#include virtual="index/phb/mytj.inc"-->
-        <!--#include virtual="index/phb/xhtj.inc"-->
+        <!--#include virtual="/page/index/phb/mztj.inc"-->
+        <!--#include virtual="/page/index/phb/mytj.inc"-->
+        <!--#include virtual="/page/index/phb/xhtj.inc"-->
       </div>
     </div>
   </div>
   <div class="second-screen clearfix">
     <div class="list-warp left">
       <h3>新华推荐</h3>
-      <!--#include virtual="index/booklist/xhtj.inc"-->
+      <!--#include virtual="/page/index/booklist/xhtj.inc"-->
     </div>
     <div class="tab-sidebar right">
       <h3>限时特价</h3>
       <div class="tab-sidebar-box">
-        <!--#include virtual="index/sidebar/xstj.inc"-->
+        <!--#include virtual="/page/index/sidebar/xstj.inc"-->
         <h5><a href="#">查看全部&gt;&gt;</a></h5>
       </div>
     </div>
@@ -86,14 +86,14 @@
   <div class="third-screen clearfix">
     <div class="list-warp left">
       <h3>读书活动</h3>
-      <!--#include virtual="index/booklist/dshd.inc"-->
+      <!--#include virtual="/page/index/booklist/dshd.inc"-->
     </div>
     <div class="tab-sidebar right">
       <h3>人气作家</h3>
       <div class="tab-sidebar-box">
-        <!--#include virtual="index/author/shenshixi.inc"-->
+        <!--#include virtual="/page/index/author/shenshixi.inc"-->
         <div class="author-bottom">
-          <!--#include virtual="index/author/author.inc"-->
+          <!--#include virtual="/page/index/author/author.inc"-->
         </div>
       </div>
     </div>
@@ -101,12 +101,12 @@
   <div class="forth-screen clearfix">
     <div class="list-warp left">
       <h3>典藏书架</h3>
-      <!--#include virtual="index/booklist/dcsj.inc"-->
+      <!--#include virtual="/page/index/booklist/dcsj.inc"-->
     </div>
     <div class="tab-sidebar right">
       <h3>媒体关注</h3>
       <div class="tab-sidebar-box">
-        <!--#include virtual="index/sidebar/mtgz.inc"-->
+        <!--#include virtual="/page/index/sidebar/mtgz.inc"-->
         <h5><a href="#">查看全部&gt;&gt;</a></h5>
       </div>
     </div>
@@ -124,18 +124,18 @@
         <li></li>
         <li></li>
       </div>
-      <!--#include virtual="index/cbs/zjkx.inc"-->
-      <!--#include virtual="index/cbs/zjsy.inc"-->
-      <!--#include virtual="index/cbs/zjsnet.inc"-->
-      <!--#include virtual="index/cbs/zjwy.inc"-->
-      <!--#include virtual="index/cbs/zjrm.inc"-->
-      <!--#include virtual="index/cbs/zjms.inc"-->
-      <!--#include virtual="index/cbs/zjjy.inc"-->
-      <!--#include virtual="index/cbs/zjgj.inc"-->
+      <!--#include virtual="/page/index/cbs/zjkx.inc"-->
+      <!--#include virtual="/page/index/cbs/zjsy.inc"-->
+      <!--#include virtual="/page/index/cbs/zjsnet.inc"-->
+      <!--#include virtual="/page/index/cbs/zjwy.inc"-->
+      <!--#include virtual="/page/index/cbs/zjrm.inc"-->
+      <!--#include virtual="/page/index/cbs/zjms.inc"-->
+      <!--#include virtual="/page/index/cbs/zjjy.inc"-->
+      <!--#include virtual="/page/index/cbs/zjgj.inc"-->
     </div>
   </div>
 </div>
-<!--#include virtual="common/footer.inc"-->
+<!--#include virtual="/page/common/footer.inc"-->
 
 <script data-main="/static/dist/js/index.js" src="/static/js/require.js"></script>
 </body>
