--- a/index.html
+++ b/index.html
@@ -115,14 +115,14 @@
     <h3>浙版名社</h3>
     <div class="tab-view">
       <div class="tab-control clearfix">
-        <li class="active first-item"></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li class="active first-item"><a href=""><i></i><h3>浙江科学技术出版社</h3></a></li>
+        <li class="second-item"><a href=""><i></i><h3>浙江摄影出版社</h3></a></li>
+        <li class="third-item"><a href=""><i></i><h3>浙江少年儿童出版社</h3></a></li>
+        <li class="forth-item"><a href=""><i></i><h3>浙江文艺出版社</h3></a></li>
+        <li class="fifth-item"><a href=""><i></i><h3>浙江人民出版社</h3></a></li>
+        <li class="sixth-item"><a href=""><i></i><h3>浙江人民美术出版社</h3></a></li>
+        <li class="seventh-item"><a href=""><i></i><h3>浙江教育出版社</h3></a></li>
+        <li class="eighth-item"><a href=""><i></i><h3>浙江古籍出版社</h3></a></li>
       </div>
       <!--#include virtual="/page/index/cbs/zjkx.inc"-->
       <!--#include virtual="/page/index/cbs/zjsy.inc"-->
