--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <div class="notice right">
       <div class="notice-list">
         <h3>最新动态</h3>
-        <!--#include virtual="/page/index/news/news.inc"-->
+        <div id="news">
+          <!--#include virtual="/page/index/news/book/news.inc"-->
+        </div>
       </div>
       <div class="wx">
         <h3>微信商城</h3>
@@ -161,7 +163,6 @@
   </div>
 </div>
 <!--#include virtual="/page/common/footer.inc"-->
-
 <script data-main="/static/dist/js/index.js" src="/static/js/require.js"></script>
 </body>
 </html>
