--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="notice-list">
         <h3>最新动态</h3>
         <div id="news">
-          <!--#include virtual="/page/index/news/book/news.inc"-->
+          <!--#include virtual="/page/index/news/hangzhou/news.ajaxinc"-->
         </div>
       </div>
       <div class="wx">
@@ -97,7 +97,9 @@
   <div class="third-screen clearfix">
     <div class="list-warp left">
       <h3><b>读</b>书活动</h3>
-      <!--#include virtual="/page/index/booklist/dshd/common.inc"-->
+      <div id="dshd">
+        <!--#include virtual="/page/index/dshd/book/dshd.ajaxinc"-->
+      </div>
     </div>
     <div class="tab-sidebar right">
       <h3>人气作家</h3>
