--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
       <div class="notice-list">
         <h3>×îÐÂ¶¯Ì¬</h3>
         <div id="news">
-          <!--#include virtual="/gg/gg.inc"-->
-          <!-- include virtual="/page/index/news/hangzhou/news.ajaxinc" -->
+          <!--#include virtual="/page/index/news/hangzhou/news.ajaxinc" -->
         </div>
       </div>
       <div class="wx">
@@ -166,7 +165,6 @@
     </div>
   </div>
 </div>
-<!--#include virtual="/page/common/backTop.inc"-->
 <!--#include virtual="/page/common/footer.inc"-->
 <script data-main="/static/dist/js/index.js" src="/static/js/require.js"></script>
 </body>
